--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
             <img id="gif" class="hidden" src="http://i.giphy.com/FuLrWFLt9Feg.gif">
         </div>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script
+			  src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
+			  integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
+			  crossorigin="anonymous"></script>
         <script src="movement.js"></script>
         <script>
             $(document).ready(function(){
                 $("#slideImg").rotate();
                 $("#gifButton").click(function(){
-                    $("#gif").switchClass("hidden","dragon-surprise");
-                })
+                    $("#gif").switchClass("hidden", "dragon-surprise");
+                });
+                console.log($("#gif").switchClass)
             });
         </script>
     </body>
