--- a/funwithdots/index.html
+++ b/funwithdots/index.html
@@ -7,13 +7,17 @@
         <h1 id="heading">Phun With Physics</h1>
         <button id="start" class="showing">START</button>
         <div id="balls">
-            <img id="b1" src="http://www.primordia.com/blog//archives/images/Green.png">
+            <img onmouseover="no_touchy()" onmouseout="waterbottle()" id="b1" src="http://www.primordia.com/blog//archives/images/Green.png">
+        </div>
+        <div id="score">
+            <p id="moving">points: 0</p>
         </div>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script
 			  src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
 			  integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
 			  crossorigin="anonymous"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.12/p5.js"></script>
         <script src="js.js"></script>
         <script>
             $("#start").click(function(){
