--- a/dodge/index.html
+++ b/dodge/index.html
@@ -2,13 +2,12 @@
 <html>
     <head>
         <title>Dodge</title>
-        <link href="style2.css" rel="stylesheet">
     </head>
     <body>
         <div id="score">
             <p id="moving">points: 0</p>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.12/p5.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.0/p5.min.js"></script>
         <script src="https://cdn.rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script>
         <script src="game.js"></script>
     </body>
