--- a/platformer/index.html
+++ b/platformer/index.html
@@ -2,8 +2,20 @@
 <html>
     <head>
         <title>Platformer Game</title>
+        <link href="button.css" rel="stylesheet">
     </head>
     <body>
+        <button id="start" class="show">Start</button>
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script
+			  src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
+			  integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
+			  crossorigin="anonymous"></script>
+		<script>
+            $("#start").click(function(){
+                 $("#start").switchClass("showing", "hide");
+            });
+        </script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.23/p5.min.js"></script>
         <script type="text/javascript" src="https://cdn.rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script>
         <script type="text/javascript" src="game1.js"></script>
