--- a/links/index.html
+++ b/links/index.html
@@ -11,5 +11,6 @@
         <p><a href="http://gabriellazrak.github.io/funwithdots">Fun with dots</a></p>
         <p><a href="http://gabriellazrak.github.io/geometric_pattern">Geometric Pattern</a></p>
         <p><a href="http://gabriellazrak.github.io/dodge">Falling Asteroids</a></p>
+        <p><a href="http://gabriellazrak.github.io/platformer">Platformer</a></p>
     </body>
 </html>
