--- a/links/index.html
+++ b/links/index.html
@@ -12,5 +12,6 @@
         <p><a href="http://gabriellazrak.github.io/geometric_pattern">Geometric Pattern</a></p>
         <p><a href="http://gabriellazrak.github.io/dodge">Falling Asteroids</a></p>
         <p><a href="http://gabriellazrak.github.io/platformer">Platformer</a></p>
+        <p><a href="http://gabriellazrak.github.io/notes_to_self">Notes To Self</a></p>
     </body>
 </html>
