--- a/collab_sketch/index.html
+++ b/collab_sketch/index.html
@@ -2,12 +2,31 @@
 <html>
     <head>
         <title>Collab Sketch!</title>
+        <script type="text/javascript" 
+                        src="colorpicker.js"></script>
+        <style type="text/css">
+          #picker { width: 200px; height: 200px }
+          #slide { width: 30px; height: 200px }
+        </style>
     </head>
     <body>
+        <div id="picker"></div>
+                <div id="slide"></div>
+                <script type="text/javascript">
+                  ColorPicker(
+                    document.getElementById('slide'),
+                    document.getElementById('picker'),
+                    function(hex, hsv, rgb) {
+                      r_g_b = hex;
+                    });</script>
         <div id="controls">
             <button id="saveDrawing">Save to Computer</button>
             <button id="clearDrawing">DELETE DRAWING</button>
         </div>
+        <script type="text/javascript" src="jqColorPicker.min.js"></script>
+        <script type="text/javascript">
+            $('.color').colorPicker();
+        </script>
         <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.23/p5.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
