--- a/collab_sketch/index.html
+++ b/collab_sketch/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Collab Sketch!</title>
+        <link href="style.css" rel="stylesheet">
         <script type="text/javascript" 
                         src="colorpicker.js"></script>
         <style type="text/css">
@@ -11,7 +12,7 @@
     </head>
     <body>
         <div id="picker"></div>
-                <div id="slide"></div>
+        <div id="slide"></div>
                 <script type="text/javascript">
                   ColorPicker(
                     document.getElementById('slide'),
