--- a/links/index.html
+++ b/links/index.html
@@ -13,5 +13,7 @@
         <p><a href="http://gabriellazrak.github.io/dodge">Falling Asteroids</a></p>
         <p><a href="http://gabriellazrak.github.io/platformer">Platformer</a></p>
         <p><a href="http://gabriellazrak.github.io/notes_to_self">Notes To Self</a></p>
+        <p><a href="http://gabriellazrak.github.io/miniproject">MiniProject</a></p>
+        <p><a href="http://gabriellazrak.github.io/collab_sketch">Collab Sketch</a></p>
     </body>
 </html>
