--- a/miniproject/index.html
+++ b/miniproject/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <p id="trophies">trophies: 0/10</p>
+        <p id="lives"></p>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script
 			  src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
