--- a/links/index.html
+++ b/links/index.html
@@ -15,5 +15,6 @@
         <p><a href="http://gabriellazrak.github.io/notes_to_self">Notes To Self</a></p>
         <p><a href="http://gabriellazrak.github.io/miniproject">MiniProject</a></p>
         <p><a href="http://gabriellazrak.github.io/collab_sketch">Collab Sketch</a></p>
+        <p><a href="http://gabriellazrak.github.io/finalproject">Final Project</a></p>
     </body>
 </html>
